objects/ARDemo1__c.object
<CustomObject>
    <fields>
        <fullName>DemoCheckbox1__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DemoCheckbox1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberDemo1__c</fullName>
        <label>NumberDemo1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TextDemo1__c</fullName>
        <label>TextDemo1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>ARDemo1</label>
    <nameField>
        <label>ARDemo1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ARDemo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>